MuMIn package news:

Version: 1.10.4 (2014-08-02)
(fixed) importance, model.avg: wrong order of 'N containing models' attribute
	(bug reported by Alba Estrada)
documentation: added section "Common problems" to 'dredge' help page.

Version: 1.10.3 (2014-06-27)
fixed: 'dredge' no longer drops random term in 'glmmadmb' models (spotted by 
	Carlos León)

Version: 1.10.2
mystery update
	
Version: 1.10.1 (2014-05-19)
dredge: more meaningful warning message about misspecified 'fixed' argument
pdredge: synchronized code with 'dredge'
documentation: improved formatting

Version: 1.10.0 (2014-05-02)
r.squaredGLMM: throws an error if contrasts that have been used for random 
	factors in the "merMod" model do not match the ones in model matrix. This 
	happens if there are factors in random slope formula and user has changed 
	relevant 'options(contrasts)' since the model was fitted.
dredge: na.action checking now allows "option(na.action)" to be a function and 
	not only character string.

Version: 1.9.26 (2014-03-16)
(fixed) dredge: when columns/rows in a subset matrix were in different order 
	than model terms, the values became wrongly rearranged (spotted by 
	a certain 'Frank' on Stackoverflow).

Version: 1.9.25 (2014-03-13)
(added) methods for 'cpglm' and 'cpglmm' (from package 'cplm') (suggested by 
Andrew Cooper)

Version: 1.9.24 (2014-02-26)
(fixed) 'getAllTerms.unmarkedFit' gave error when 'alpha' was estimated in 
	pcount model (when else?) (reported by Lindsey Garner)

Version: 1.9.23 (2014-02-24)
(added) methods 'model.matrix' and 'model.frame' for 'lme', because the default 
	ones give wrong results when there is 'subset' or 'contrasts' set, or 
	'na.omit'ting.

Version: 1.9.22 (2014-02-20)
r.squaredGLMM: can be now applied to models with random slopes (based on idea 
	and R code by Paul Johnson). Added calculation of conditional R^2 for 
	Poisson family models.

Version: 1.9.21 (2014-02-17)